[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/microgames/tutorial/entities/00_01_CrazyCarsWario.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/base/MicrogameStandard.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/microgames/tutorial/entities/00_01_CrazyCar.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/microgames/Microgame_00_01.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/music/microgame_00_01.mp3" type="AudioStream" id=6]
[ext_resource path="res://scenes/util/AudioSpeedController.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/microgames/tutorial/entities/00_01_SmallCrazyCar.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 10.5 )

[node name="Microgame_00_01" instance=ExtResource( 3 )]
script = ExtResource( 5 )
time = 3.5

[node name="Camera" parent="." index="0"]
position = Vector2( -340, -80 )

[node name="TileMap" parent="." index="1"]
tile_data = PoolIntArray( -458789, 1, 0, -393253, 1, 0, -327717, 1, 0, -262181, 1, 0, -196645, 1, 0, -131109, 1, 0, -65573, 1, 0, -65572, 1, 0, -65571, 1, 0, -65570, 1, 0, -65569, 1, 0, -65568, 1, 0, -65567, 1, 0, -65566, 1, 0, -65565, 1, 0, -65564, 1, 0, -65563, 1, 0, -65562, 1, 0, -65561, 1, 0, -65560, 1, 0, -65559, 1, 0, -65558, 1, 0, -65557, 1, 0, -65556, 1, 0, -65555, 1, 0, -65554, 1, 0, -65553, 1, 0, -65552, 1, 0, -65551, 1, 0, -65550, 1, 0, -65549, 1, 0, -65548, 1, 0, -65547, 1, 0, -65546, 1, 0, -65545, 1, 0, -65544, 1, 0, -65543, 1, 0, -37, 1, 0, -36, 1, 0, -35, 1, 0, -34, 1, 0, -33, 1, 0, -32, 1, 0, -31, 1, 0, -30, 1, 0, -29, 1, 0, -28, 1, 0, -27, 1, 0, -26, 1, 0, -25, 1, 0, -24, 1, 0, -23, 1, 0, -22, 1, 0, -21, 1, 0, -20, 1, 0, -19, 1, 0, -18, 1, 0, -17, 1, 0, -16, 1, 0, -15, 1, 0, -14, 1, 0, -13, 1, 0, -12, 1, 0, -11, 1, 0, -10, 1, 0, -9, 1, 0, -8, 1, 0, -7, 1, 0 )

[node name="CrazyCar" parent="." index="2" instance=ExtResource( 4 )]
position = Vector2( -139, -38 )

[node name="Player" parent="." index="3" instance=ExtResource( 1 )]
position = Vector2( -407, -32 )

[node name="SmallCrazyCar" parent="." index="4" instance=ExtResource( 8 )]
position = Vector2( -139, -32 )

[node name="Events" type="Node2D" parent="." index="5"]
position = Vector2( 11, 1 )

[node name="StopPoint" type="Area2D" parent="Events" index="0"]
position = Vector2( -330, -32 )
collision_layer = 4096
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Events/StopPoint" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )
disabled = true

[node name="JumpPoint" type="Area2D" parent="Events" index="1"]
position = Vector2( -351, -32 )
collision_layer = 8192
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Events/JumpPoint" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )
disabled = true

[node name="TurnBackPoint" type="Area2D" parent="Events" index="2"]
position = Vector2( -330, -32 )
collision_layer = 16384
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Events/TurnBackPoint" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )
disabled = true

[node name="VroomSoundPoint" type="Area2D" parent="Events" index="3"]
position = Vector2( -240, -32 )
collision_layer = 32768
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Events/VroomSoundPoint" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )

[node name="MicrogameSoundtrack" parent="." index="6" instance=ExtResource( 7 )]
stream = ExtResource( 6 )
bus = "Microgame-Soundtrack"
